<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buddy_profile"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/slate_grey">

    <!--Toolbar-->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/top_options_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_black_border_bottom">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:contentDescription="@string/create_profile"
                    android:id="@+id/menu_bar_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/menu_icon" />

                <ImageView
                    android:contentDescription="@string/create_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_toEndOf="@+id/menu_bar_icon"
                    android:paddingStart="0dp"
                    android:paddingEnd="45dp"
                    android:src="@drawable/classbuddies"

                    />
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile">

        <!--Profile Header-->
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/profile_box"
            android:layout_width="250dp"
            android:layout_height="110dp"
            android:background="@drawable/profile_box"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true">
            <!--Name-->
            <TextView
                android:id="@+id/name"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:text="@string/user_full_name"
                android:textColor="@color/dark_grey"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center" />
            <!--Major-->
            <TextView
                android:id="@+id/major"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:text="@string/major"
                android:textColor="@color/dark_grey"
                android:textSize="15sp"
                android:textAlignment="center"
                android:layout_marginBottom="43dp" />
        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/alter_buddy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profile"
        android:clickable="false">
        <!--Remove Buddy Button-->
        <ImageView
            android:id="@+id/alter_buddy_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/remove_buddy_icon"
            android:src="@drawable/delete_icon" />

        <TextView
            android:id="@+id/alter_buddy_text"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="25dp"
            android:text="Remove Buddy"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/message_buddy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alter_buddy">
        <!--Message Buddy Button-->
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/message_icon"
            android:src="@drawable/classchat_icon"
            android:id="@+id/imageView6" />

        <TextView
            android:id="@+id/message_text"
            android:layout_width="135dp"
            android:layout_height="35dp"
            android:layout_alignTop="@+id/imageView6"
            android:layout_marginStart="9dp"
            android:layout_toEndOf="@+id/imageView6"
            android:text="@string/message"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <!-- Class List -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/classes"
        android:layout_below="@+id/message_buddy">
        <!--Classes Header-->
        <TextView
            android:id="@+id/classes_header"
            android:layout_width="135dp"
            android:layout_height="30dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="12dp"
            android:text="@string/classes"
            android:textColor="@color/grey"
            android:textSize="25sp"
            android:textStyle="bold" />
        <!--Line-->
        <View
            android:layout_width="340dp"
            android:layout_height="1dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="40dp"
            android:background="@color/grey"
            android:id="@+id/view" />

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/view"
            android:layout_marginTop="7dp"
            android:clickable="false"
            android:contextClickable="false"
            android:scrollbars="vertical" />
    </RelativeLayout>
</RelativeLayout>
