<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="cs131.classbuddies.LogInActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coord_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="55dp"
            android:weightSum="1">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:adjustViewBounds="false"
                android:contentDescription=""
                android:elevation="2dp"
                app:srcCompat="@drawable/classbuddies"
                tools:ignore="ContentDescription"
                android:layout_weight="1"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="text|textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    tools:ignore="LabelFor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/pass_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:paddingTop="30dp">

                <ImageView
                    android:id="@+id/img_log_in"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:elevation="4dp"
                    app:srcCompat="@drawable/log_in_button_w_text"
                    tools:ignore="ContentDescription" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                android:layout_weight="0">

                <ImageView
                    android:id="@+id/img_create_account"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:contentDescription=""
                    android:elevation="4dp"
                    app:srcCompat="@drawable/create_account_button"
                    tools:ignore="ContentDescription" />

            </FrameLayout>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
