...
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
   android:background="@color/slate_grey">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="1">
...


        </android.support.design.widget.AppBarLayout>
        <!-- **************Home Toolbar************************* -->

        <LinearLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <RelativeLayout
...
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/profile_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/buddies_tab"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:paddingLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
...
